# xxhash-wrapper

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  meson.build  meson.options  unity.config
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: PLATFORM_VERIFICATION.md
docs/ci/: gitlab-flow.md
docs/notes/: 2026-02-18-meeting-minutes.adoc  2026-02-19-api-audit-and-unseeded.adoc
include/: xxh3.h
scripts/: build_and_bench.sh  check-abi.sh  check-commit-msg.sh  check-test-feature-macros.sh  repro-check.sh
specs/001-xxh3-simd-wrapper/: plan.md  spec.md  tasks.md
specs/001-xxh3-simd-wrapper/checklists/: plan.md  requirements.md
src/: xxh3_converters.h  xxh3_wrapper.c
src/common/: internal_utils.h
src/variants/: scalar.c
src/variants/arm/: neon.c  sve.c
src/variants/x86/: avx2.c  avx512.c  sse2.c
tests/bench/: bench_variants.c
tests/fuzz/: fuzz_xxh3.c
tests/integration/: check-cr-xxhash.sh
tests/unit/: test_variants.c
tests/unity/: unity.c  unity.h
